@@ -7,58 +7,12 @@
  */
 
 plugins {
-	id 'java'
-	// Apply the application plugin to add support for building a CLI application in Java.
 	id 'application'
-	id "checkstyle"
-	id "jacoco"
-	id "com.diffplug.spotless" version "6.19.0"
-	id "net.ltgt.errorprone" version "3.1.0"
 	id 'org.graalvm.buildtools.native' version '0.9.22'
-//    id 'org.unbroken-dome.test-sets' version '4.0.0'
-//    id 'maven-publish'
-//    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
-//    id 'signing'
 }
 
-group 'me.grapebaba'
-version '0.1.0'
-
-repositories {
-	// Use Maven Central for resolving dependencies.
-	mavenCentral()
-	maven {
-		url "https://artifacts.consensys.net/public/teku/maven/"
-	}
-	maven {
-		url "https://dl.cloudsmith.io/public/libp2p/jvm-libp2p/maven/"
-	}
-	maven {
-		url "https://hyperledger.jfrog.io/artifactory/besu-maven/"
-	}
-	maven {
-		url "https://artifacts.consensys.net/public/maven/maven/"
-	}
-}
-
-
-tasks.withType(JavaCompile).configureEach {
-	options.annotationProcessorPath = configurations.annotationProcessor
-	options.compilerArgs += "--enable-preview"
-	options.compilerArgs += "-Xlint:preview"
-	options.compilerArgs += ["--add-modules", "jdk.incubator.concurrent"]
-	options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
-}
-
-tasks.withType(Test).configureEach {
-	jvmArgs += "--enable-preview"
-	jvmArgs += ["--add-modules", "jdk.incubator.concurrent"]
-}
-
-tasks.withType(JavaExec).configureEach {
-	jvmArgs += "--enable-preview"
-	jvmArgs += ["--add-modules", "jdk.incubator.concurrent"]
-}
+group 'io.optimism'
+version '0.1.1'
 
 dependencies {
 	// This dependency is used by the application.
@@ -226,95 +180,9 @@ dependencies {
 	testImplementation("com.squareup.okhttp3:mockwebserver:5.0.0-alpha.2")
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
-java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(20)
-	}
-}
-
 application {
 	// Define the main class for the application.
 	mainClass = 'io.optimism.Hildr'
-}
-
-test {
-	useJUnitPlatform()
-	testLogging {
-		events "passed", "skipped", "failed"
-	}
-	finalizedBy jacocoTestReport
-}
-
-jacoco {
-	toolVersion = "0.8.9"
-}
-
-jacocoTestReport {
-	dependsOn test
-
-	reports {
-		csv.required = true
-	}
-}
-
-jacocoTestCoverageVerification {
-
-	violationRules {
-		rule {
-			limit {
-				minimum = 0
-			}
-		}
-	}
-}
-
-checkstyle {
-	toolVersion = '10.10.0'
-	// default checkstyle config -- specific to your team agreement
-	configFile = project(":").file("config/checkstyle/google_checks.xml")
-	// Google style (idiosyncratic to Google):
-	// configFile = project(":").file("config/checkstyle/google_checks.xml")
-	// SUN style (closest to modern Java styles) -- the basis for this project:
-	// configFile = project(":").file("config/checkstyle/sun_checks.xml")
-//	ignoreFailures = false
-//	maxWarnings = 0
-}
-
-spotless {
-	// optional: limit format enforcement to just the files changed by this feature branch
-//    ratchetFrom 'origin/main'
-
-	format 'misc', {
-		// define the files to apply `misc` to
-		target '*.gradle', '*.md', '.gitignore'
-
-		// define the steps to apply to those files
-		trimTrailingWhitespace()
-		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
-		endWithNewline()
-	}
-	java {
-		// Use the default importOrder configuration
-
-		// don't need to set target, it is inferred from java
-
-		// apply a specific flavor of google-java-format
-		googleJavaFormat('1.17.0')
-		// fix formatting of type annotations
-		formatAnnotations()
-		// make sure every file has the following copyright header.
-		// optionally, Spotless can set copyright years by digging
-		// through git history (see "license" section below)
-		licenseHeaderFile(project(":").file("config/spotless/java.license")).named('hildr').onlyIfContentMatches('/*\n' +
-				' * Copyright 2023 281165273grape@gmail.com')
-		licenseHeaderFile(project(":").file("config/spotless/besu.license")).named('besu').onlyIfContentMatches('/*\n' +
-				' * Copyright ConsenSys AG')
-
-		importOrder()
-
-		removeUnusedImports()
-	}
 }
 
 checkstyleMain
@@ -336,45 +204,6 @@ checkstyleMain
 		.exclude('io/optimism/rpc/internal/response/JsonRpcNoResponse.java')
 		.exclude('io/optimism/rpc/execution/BaseJsonRpcProcessor.java')
 		.exclude('io/optimism/rpc/execution/JsonRpcProcessor.java')
-//testSets {
-//    integrationTest
-//}
-
-tasks.named('test') {
-	// Use JUnit Platform for unit tests.
-	useJUnitPlatform()
-}
-
-check {
-	dependsOn += jacocoTestCoverageVerification
-//	dependsOn += integrationTest
-}
-
-tasks.withType(Test).configureEach {
-	def outputDir = reports.junitXml.outputLocation
-	jvmArgumentProviders << ({
-		[
-				"-Djunit.platform.reporting.open.xml.enabled=true",
-				"-Djunit.platform.reporting.output.dir=${outputDir.get().asFile.absolutePath}",
-				"--enable-preview"
-		]
-	} as CommandLineArgumentProvider)
-}
-
-java {
-	withJavadocJar()
-	withSourcesJar()
-}
-
-
-javadoc {
-	if (JavaVersion.current().isJava9Compatible()) {
-		options.addBooleanOption('html5', true)
-	}
-	options.addBooleanOption('-enable-preview', true)
-	options.addStringOption('-release', '20')
-	options.addStringOption('-add-modules', 'jdk.incubator.concurrent')
-}
 
 jar {
 	manifest {
